--- a/Script/external.html
+++ b/Script/external.html
@@ -1,12 +1,12 @@
-<!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
+<!-- Created by Uday OP -->
 <html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="description" content="HTTrack is an easy-to-use website mirror utility. It allows you to download a World Wide website from the Internet to a local directory,building recursively all structures, getting html, images, and other files from the server to your computer. Links are rebuiltrelatively so that you can freely browse to the local site (works with any browser). You can mirror several sites together so that you can jump from one toanother. You can, also, update an existing mirror site, or resume an interrupted download. The robot is fully configurable, with an integrated help" />
+	<meta name="description" content="Github is an easy-to-use website maker utility. It allows you to download a World Wide website from the Internet to a local directory,building recursively all structures, getting html, images, and other files from the server to your computer. Links are rebuiltrelatively so that you can freely browse to the local site (works with any browser). You can mirror several sites together so that you can jump from one toanother. You can, also, update an existing mirror site, or resume an interrupted download. The robot is fully configurable, with an integrated help" />
 	<meta name="keywords" content="httrack, HTTRACK, HTTrack, winhttrack, WINHTTRACK, WinHTTrack, offline browser, web mirror utility, aspirateur web, surf offline, web capture, www mirror utility, browse offline, local  site builder, website mirroring, aspirateur www, internet grabber, capture de site web, internet tool, hors connexion, unix, dos, windows 95, windows 98, solaris, ibm580, AIX 4.0, HTS, HTGet, web aspirator, web aspirateur, libre, GPL, GNU, free software" />
-	<title>Page not retrieved! - HTTrack Website Copier</title>
+	<title>Page not retrieved! </title>
   %s
 	<style type="text/css">
 	<!--
@@ -82,7 +82,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 
 <table width="76%%" border="0" align="center" cellspacing="0" cellpadding="3" class="tableWidth">
 	<tr>
-	<td id="subTitle">HTTrack Website Copier - Open Source offline browser</td>
+	<td id="subTitle">Open Source offline browser</td>
 	</tr>
 </table>
 <table width="76%%" border="0" align="center" cellspacing="0" cellpadding="0" class="tableWidth">
@@ -96,7 +96,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 		<td id="pageContent"> 
 <!-- ==================== End prologue ==================== -->
 <h1><strong><u>Oops!...</u></strong></h1>
-<h3>This page has <font color="red"><em>not</em></font> been retrieved by HTTrack Website Copier. </h3>
+<h3>This page has <font color="red"><em>not</em></font> been retrieved by Uday OP's Panel </h3>
 <script language="Javascript">
 <!--
   var loc=document.location.toString();
@@ -109,7 +109,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
   }
 // -->
 </script>
-<h6 align="right">Mirror by HTTrack Website Copier</h6>
+<h6 align="right">Mirror by Uday</h6>
 <!-- ==================== Start epilogue ==================== -->
 		</td>
 		</tr>
@@ -123,7 +123,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 
 <table width="76%%" height="100%%" border="0" align="center" valign="bottom" cellspacing="0" cellpadding="0">
 	<tr>
-	<td id="footer"><small>&copy; 2014 Xavier Roche & other contributors - Web Design: Kauler Leto.</small></td>
+	<td id="footer"><small>&copy; By Uday Bindal</small></td>
 	</tr>
 </table>
 
