--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="Github is an easy-to-use website maker utility. It allows you to download a World Wide website from the Internet to a local directory,building recursively all structures, getting html, images, and other files from the server to your computer. Links are rebuiltrelatively so that you can freely browse to the local site (works with any browser). You can mirror several sites together so that you can jump from one toanother. You can, also, update an existing mirror site, or resume an interrupted download. The robot is fully configurable, with an integrated help" />
 	<meta name="keywords" content="httrack, HTTRACK, HTTrack, winhttrack, WINHTTRACK, WinHTTrack, offline browser, web mirror utility, aspirateur web, surf offline, web capture, www mirror utility, browse offline, local  site builder, website mirroring, aspirateur www, internet grabber, capture de site web, internet tool, hors connexion, unix, dos, windows 95, windows 98, solaris, ibm580, AIX 4.0, HTS, HTGet, web aspirator, web aspirateur, libre, GPL, GNU, free software" />
 	<title>List Of Uday OP Projects</title>
-	<!-- Mirror and index made by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
+	
 
 	<style type="text/css">
 	<!--
@@ -111,10 +111,9 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 	</TABLE>
 	<BR>
 	<H6 ALIGN="RIGHT">
-         <I>Made By Uday OP]</I>
+         <I>Made By Uday OP</I>
 	</H6>
-	<!-- Mirror and index made by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
-	<!-- Thanks for using HTTrack Website Copier! -->
+	
 
 <!-- ==================== Start epilogue ==================== -->
 		</td>
