--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 <body>
 <table width="76%" border="0" align="center" cellspacing="0" cellpadding="3" class="tableWidth">
 	<tr>
-	<td id="subTitle">HTTrack Website Copier - Open Source offline browser</td>
+	<td id="subTitle">Control Panel Of Uday OP</td>
 	</tr>
 </table>
 <table width="76%" border="0" align="center" cellspacing="0" cellpadding="0" class="tableWidth">
