--- a/Script/wish.hktechnical.com/u/211023V63SCK11756/web.h/index.html
+++ b/Script/wish.hktechnical.com/u/211023V63SCK11756/web.h/index.html
@@ -184,20 +184,20 @@ var date = '10-28-2021';
 </div>
 <div id="ads" class="ads">
 
-<center><a href="../../../../external.html?link=https://dare4frnd.hktechnical.com/"><img src="../../../../1.bp.blogspot.com/-tzKonv5iPhs/Xv2a_9UMEWI/AAAAAAAAD-g/fl69vQQ8lwAM62huf7FoS9doPkPUFr5ngCK4BGAsYHg/s320/photo6330286821254212106.jpg" width="60%" style="max-width:200px;"></a></center> 
 </div>
 </center>
 <div class="text-center" id="brand_logo">
 </div>
 <br>
 <div class="container share">
-<center><span style=" border-radius:10px; padding:2px; background: rgba(122,122,122,0.5); color: white; font-size: 15pt;font-family: 'Indie Flower', cursive;"> 🌠Share with your friends & family🌠 </span></center></br>
+<center><span style=" border-radius:10px; padding:2px; background: rgba(122,122,122,0.5); color: white; font-size: 15pt;font-family: 'Indie Flower', cursive;"></span></center></br>
 <div class='sharecartoon t2' id='sharecartoon' style='background-image: linear-gradient(to bottom right,  rgba(102, 0, 255,0.5), rgba(191, 0, 255,0.5),rgba(255, 0, 170,0.5),rgba(255, 0, 55,0.5));'><img src="../../../../4.bp.blogspot.com/-_ZpU-nyCpMc/WyNC8YxwrfI/AAAAAAAAAaw/KXfG3ltVcsgu57_M4_Fa7dZEaRVu1EyGACLcBGAs/s1600/c.gif" height="70px" width="110px" /></div></br></br>
 <div id="formBox" class="formBox" style="left:6%;right:6%">
-<input type="text" name="name" class="nameTextBox" id="nameTextBox" placeholder="Enter Your Name!">
+<--! type="text" name="name" class="nameTextBox" id="nameTextBox" placeholder="Enter Your Name!">
 <div class="goButton" id="goButton" onclick="if (!window.__cfRLUnblockHandlers) return false; createGreeting()" data-cf-modified-7a8b17f2b409251587b14731-="">
 Go
-</div>
+</div> -->
+	
 </div>
 <div id="share-button" hidden class='share-footer' text align="center">
 <div class="container enter-name">
